--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ info.app.enconding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
 spring.boot.admin.client.url=http://localhost:8081/
+
+#SECURITY
+spring.security.user.name=admin@fiap.com.br
+spring.security.user.password=administrador
